# persona-insight

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
